<resources>
    <string name="app_name">Saúde na Faixa</string>
    <string name="activity_login_email">E-Mail</string>
    <string name="activity_login_password">Senha</string>
    <string name="activity_login_connect_bt">Conectar</string>
    <string name="activity_login_sign_up">Cadastre-se</string>
    <string name="activity_login_keep_me_logged">Me mantenha conectado</string>
    <string name="activity_login_privacy">Aceito a política de privacidade</string>

    <string name="activity_sign_up_name">Nome</string>
    <string name="activity_sign_up_gender">Gênero</string>
    <string name="activity_sign_up_age">Idade</string>
    <string name="activity_sign_up_weight">Peso</string>
    <string name="activity_sign_up_height">Altura</string>
    <string name="activity_sign_up_email">E-Mail</string>
    <string name="activity_sign_up_email_confirm">Confirmar E-Mail</string>
    <string name="activity_sign_up_password">Senha</string>
    <string name="activity_sign_up_password_confirm">Confirmar Senha</string>
    <string name="activity_sign_up_allergies">Alergias</string>
    <string name="activity_sign_up_previous_health_problems">Problemas de saúde prévios</string>
    <string name="activity_sign_up_previous_surgeries">Cirurgias prévias</string>
    <string name="activity_sign_up_current_medicines">Medicamentos em uso</string>
    <string name="activity_sign_up_emergency_contacts">Contatos de emergência</string>
    <string name="activity_sign_up_sign_up">Cadastrar</string>

    <string name="activity_home_general_rate">Nota geral da minha saúde</string>
    <string name="activity_home_emotional_health_today">Saúde Emocional Hoje</string>
    <string name="activity_home_physical_health_today">Saúde Física Agora</string>
    <string name="activity_home_general_alerts">Alertas</string>
    <string name="activity_home_general_online_appointment">Consulta Online</string>
    <string name="activity_home_general_profile">Meu Perfil</string>

    <string name="activity_emotional_health_how_are_you_feeling">Como você está seu humor hoje?</string>
    <string name="activity_emotional_health_anxiety_level">Como está sua ansiedade hoje?</string>
    <string name="activity_emotional_health_stress_level">Como está seu estresse hoje?</string>
    <string name="activity_emotional_health_emotions">Quais destas emoções você sentiu hoje?</string>
    <string name="activity_emotional_health_observations">Observações</string>
    <string-array name="activity_emotional_health_emotions_list">
        <item>Alegria</item>
        <item>Tristeza</item>
        <item>Nojo</item>
        <item>Raiva</item>
        <item>Medo</item>
    </string-array>

    <string name="activity_real_time_health_blood_pressure">Pressão arterial</string>
    <string name="activity_real_time_health_heart_rate">Batimentos Cardíacos</string>
    <string name="activity_real_time_health_body_temperature">Temperatura Corporal</string>
    <string name="activity_real_time_health_steps">Quantidade de Passos</string>
    <string name="activity_real_time_health_sleep_hours">Horas de sono</string>

    <string name="activity_physical_health_rate">é a nota da sua saúde hoje</string>
    <string name="activity_physical_health_improve_rate_bt">Clique para ver como aumentar sua nota</string>
</resources>